# Perf-or-comp

./: .gitignore  README.md
.github/workflows/: main.yml
01/: CMakeLists.txt  performance_test.sh  test_config.txt
01/lib/: cluster_functions.sh  config.sh
01/small_samples/: Barbist_01.md  CMakeLists.txt
01/small_samples/lib/: measurement.sh  parsing.sh  reporting.sh
01/small_samples/mmul/: mmul.c
02/: Barbist_02.md  CMakeLists.txt  Makefile  cluster_plot.sh  loadgen_io.c  local_plot.sh  performance_results_cluster.csv  performance_results_cluster.md  performance_results_filegen_workload_cluster.csv  performance_results_filegen_workload_cluster.md  performance_results_local.csv  performance_results_local.md  performance_results_workload_local.csv  performance_results_workload_local.md  performance_test.sh  run_tests_with_io_load.sh  test.sh  test_config.txt
02/lib/: build_system.sh  cluster_functions.sh  config.sh  directory_structure.txt  job_creation.sh  job_management.sh  measurement.sh  parsing.sh  reporting.sh  test_runner.sh
02/load_generator/: Makefile  exec_with_workstation_heavy.sh  loadproplot.gnu
02/load_generator/mc3/: loadprofile_mc3_summary.txt
02/small_samples/: Makefile  performance_test.sh
02/small_samples/filegen/: filegen.c
02/small_samples/filesearch/: filesearch.c
02/small_samples/lib/: cluster_functions.sh  test_runner.sh
03/: Barbist_03.md
03/npb_bt/: CMakeLists.txt  Makefile  build.sh
03/npb_bt/src/: bt.c  header.h  rhs.c  solve_subs.c  x_solve.c  y_solve.c  z_solve.c
04/: Barbist_04.md  Makefile  build.sh  run.sh  run_a.sh  run_b.sh  run_cluster.sh
04/larger_samples/: build.sh
04/results_a_cluster/: massif.npb_bt_s.out  massif.npb_bt_w.out  massif.ssca2.out  runtimes.csv
04/results_a_local/: massif.npb_bt_s.out  massif.npb_bt_w.out  massif.ssca2.out  runtimes.csv
04/results_b_cluster/: npb_bt_s_events.csv  npb_bt_w_events.csv  ssca2_events.csv
04/results_b_local/: npb_bt_s_events.csv  npb_bt_w_events.csv  ssca2_events.csv
05/: Barbist_05.md  performance_results.csv  performance_results.md  performance_results_local.csv  performance_test.sh  test_config.txt  test_config_a.txt  test_config_b.txt
05/lib/: compiler_analysis.sh  compiler_optimization.sh  config.sh  job_creation.sh  job_management.sh  measurement.sh  result_processing.sh  test_runner.sh
05/results_a/: performance_results_cluster.csv  performance_results_cluster.md  performance_results_local.csv  performance_results_local.md  plot.py
05/results_b/: flag_analysis.csv  plot.py
06/: Barbist_06.md  bc.c  memory_latency_cluster.csv  memory_latency_local.csv  performance_results_cluster.csv  performance_results_cluster.md  performance_results_cluster_2.csv  performance_results_local.csv  performance_results_local.md  plot.py  plot_a.py  sheet_06.md  test_config.txt
06/data/: memory_latency_laptop.csv  performance_results_cluster_2.md  plot.py  plot_a.py
06/lib/: config.sh  job_creation.sh
06/mmul/: mmul.c  mmul_tiling.c
07/: Barbist_07.md  benchmark.slurm  malloc_test.sh  performance_test.sh  plot_a.py  plot_b.py  test_config.txt
07/lib/: build_system.sh  compiler_analysis.sh  job_creation.sh  measurement.sh
07/my_arena/: .gitignore  Makefile  malloctest.c  my_malloc.c  my_malloc.h  my_malloc_threadsave.c  plot.py  results.csv  results1.csv  results2.csv  results3.csv  test.sh
07/results/: report.txt  time_default.txt  time_mimalloc.txt  time_rpmalloc.txt
08/: Barbist_08.md  sheet_08.md
09/: Barbist_09.md  Makefile  benchmark.c  process_results.sh  run_benchmarks.sh  submit_jobs.sh
09/data_structure/: array_container.c  linkedlist_container.c  linkedlist_random.c  linkedlist_sequential.c
09/lib/: args_parser.c  args_parser.h  benchmark.h  (+2 more)
10/: Makefile  benchmark.c  group.txt  report.md
11/: Barbist_10.md  Makefile  benchmark.sh  delannoy.c  plot.py
12/: Report.md  benchmark.sh  benchmark2.sh  submit_job.sh
(+151 files in other folders)
